<package format="2">
	<name>dziadzio</name>
	<version>1.0.0</version>
	<description>Wyłuskanie części wiadomości i nadanie z odebranej wiadomości</description>
	
	<maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
    <depend>roscpp</depend>
	<depend>omnivelma_msgs</depend>
</package>
