<package format="2">
	<name>monokl</name>
	<version>1.0.0</version>
	<description>Czujnik laserowy SICK LMS100-1000</description>
	
	<maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>gazebo_ros</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
    <depend>roscpp</depend>
	
	<export>
		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
	</export>
</package>