<?xml version="1.0"?>
<package>
  <name>ocznica</name>
  <version>0.0.0</version>
  <description>Obserwator robotów</description>

  <maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>