<?xml version="1.0"?>
<package>
	<name>omnivelma</name>
	<version>1.0.0</version>
	<description>Model postawy jezdnej dla robota Velma</description>
	
	<maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>gazebo_ros</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>
	
    <run_depend>gazebo_ros</run_depend>
	<run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>geometry_msgs</run_depend>
	
	<export>
		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
	</export>
</package>