<package format="2">
	<name>omnivelma</name>
	<version>1.0.0</version>
	<description>Model postawy jezdnej dla robota Velma</description>
	
	<maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>gazebo_ros</depend>
	<depend>std_msgs</depend>
    <depend>roscpp</depend>
	<depend>geometry_msgs</depend>
	<depend>omnivelma_msgs</depend>
	<depend>tf2_ros</depend>
	
	<export>
		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
	</export>
</package>