<package format="2">
	<name>pantofelek</name>
	<version>1.0.0</version>
	<description>Proste sterowanie na podstawie czujników laserowych</description>
	
	<maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
    <depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
</package>
