<package format="2">
	<name>pseudovelma</name>
	<version>1.0.0</version>
	<description>Kinematyczny model postawy jezdnej dla robota Velma</description>
	
	<maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>gazebo_ros</depend>
	<depend>geometry_msgs</depend>
    <depend>roscpp</depend>
	<depend>omnivelma_msgs</depend>
	<depend>nav_msgs</depend>
	
	<export>
		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
	</export>
</package>
