<package format="2">
	<name>transmutator</name>
	<version>1.0.0</version>
	<description>Translacja docelowej prędkości i obrotu na prędkości kół</description>
	
	<maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
    <depend>roscpp</depend>
	<depend>geometry_msgs</depend>
	<depend>omnivelma_msgs</depend>
</package>