<package format="2">
	<name>velmaverse</name>
	<version>1.0.0</version>
	<description>Model postawy jezdnej dla robota Velma</description>
	
	<maintainer email="antyradek@protonmail.com">Antyradek</maintainer>
	
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>gazebo_ros</depend>
	<depend>omnivelma</depend>
	<depend>pseudovelma</depend>
	<depend>ocznica</depend>
	<depend>flooria</depend>
	
	<export>
		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
	</export>
</package>